<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ahahpah="http://schemas.android.com/apk/res/me.codeand.ahahpah_en">

	<me.codeand.ahahpah_en.SliderPreference
		android:key="Sensitivity" 
		android:defaultValue="0"
		android:title="@string/preference_sensitivity"
		android:summary="@string/preference_sensitivity_summary"
		ahahpah:maxText="@string/preference_slow_max" 
		ahahpah:minText="@string/preference_high_min"
		android:persistent="true" />

	<me.codeand.ahahpah_en.YesNoDialogPreference
		android:key="reset" 
		android:title="@string/preference_reset_sensitivity_title"
		android:dialogMessage="@string/preference_reset_sensitivity_dialog"
		android:dialogTitle="@string/preference_reset_sensitivity_dialog_title"
		android:negativeButtonText="@string/preference_reset_sensitivity_cancel"
		android:positiveButtonText="@string/preference_reset_sensitivity_ok" />
        
</PreferenceScreen>
